<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="650dp"
        android:layout_margin="8dp"
        android:layout_marginStart="100dp"
        android:layout_marginEnd="100dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/historyView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/black"
                android:gravity="end|center_vertical"
                android:padding="12dp"
                android:textColor="@color/white"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <TextView
                android:id="@+id/resultView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/black"
                android:gravity="end|center_vertical"
                android:padding="8dp"
                android:text="@string/button_0"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/btnClean"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_clear_entry"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnCleanAll"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_clear"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/btnSqrt"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_light"
                android:text="@string/button_sqrt"
                android:textColor="@color/black"
                android:fontFamily="monospace"
                android:textSize="28sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnModule"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_light"
                android:text="@string/button_percent"
                android:textColor="@color/black"

                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnNegate"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_light"
                android:text="@string/button_negate"
                android:textColor="@color/black"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnDivide"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="2dp"
                android:layout_weight="0.8"
                android:backgroundTint="@color/orange"
                android:text="@string/button_divide"
                android:textColor="@color/white"
                android:textSize="33sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/btn7"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_7"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn8"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_8"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn9"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_9"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMultiply"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.8"
                android:backgroundTint="@color/orange"
                android:text="@string/button_multiply"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/btn4"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_4"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn5"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_5"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn6"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_6"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnMinus"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.8"
                android:backgroundTint="@color/orange"
                android:text="@string/button_minus"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/btn1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_1"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn2"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_2"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn3"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_3"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnSuma"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.8"
                android:backgroundTint="@color/orange"
                android:text="@string/button_plus"
                android:textColor="@color/white"
                android:textSize="33sp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.5">

            <Button
                android:id="@+id/btnDecimal"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.55"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_decimal"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn0"
                android:layout_width="2dp"
                android:layout_height="match_parent"
                android:layout_margin="3dp"
                android:layout_weight="0.55"
                android:backgroundTint="@color/gray_dark"
                android:text="@string/button_0"
                android:textColor="@color/white"
                android:textSize="38sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btnEqual"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:backgroundTint="@color/gray_light"
                android:text="@string/button_equal"
                android:textColor="@color/white"
                android:textSize="34sp"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>